crates/ferrum-interfaces/tests/ui/vnext/fail/resource_lease_is_not_clone.rs
use ferrum_interfaces::vnext::{DeviceRuntime, StaticProvisioningLease};

fn duplicate<R: DeviceRuntime>(lease: StaticProvisioningLease<R>) {
    let _duplicate = lease.clone();
}

fn main() {}
